Changes,Add Dark mode++,Refactoring

--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -33,13 +33,11 @@
                 <a id="New">
             <div class="px-2 py-2  border  rounded-4 position-relative status " id="divnew" style="background-color:#e9eaef">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg>
-                        <h4>new</h4>
+                       
+                        <h4 class="text">new</h4>
                     </div>
                     <div class="triangle" id="tranew"></div>
-                    <h3>@ViewBag.NewCount</h3>
+                <h3 class="text">@ViewBag.NewCount</h3>
                 </div>
                 </a>
             </div> 
@@ -47,13 +45,11 @@
                   <a id="Pending">
         <div class="px-2 py-2 border rounded-4 position-relative status"  id="divpen">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill me-2" viewBox="0 0 16 16">
-                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
-                        </svg>
-                        <h4>pending</h4>
+
+                    <h4 class="text">pending</h4>
                     </div>
                     <div class="triangle text-white" id="trapending"></div>
-                    <h3>@ViewBag.PendingCount</h3>
+                <h3 class="text">@ViewBag.PendingCount</h3>
                 </div>
                   </a>
             </div> 
@@ -61,13 +57,11 @@
                 <a id="Active">
         <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#e9f0e8" id="divact">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg>
-                        <h4>Active</h4>
+
+                    <h4 class="text">Active</h4>
                     </div>
                     <div class="triangle text-white" id="traact"></div>
-                    <h3>@ViewBag.activecount</h3>
+                <h3 class="text">@ViewBag.activecount</h3>
                 </div>
                 </a>
             </div> 
@@ -75,13 +69,11 @@
                    <a id="Conclude">
         <div class="px-2 py-2 border  rounded-4 text-pink position-relative status" style="background-color:#f7e6ee" id="divcon">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg>
-                        <h4>conclude</h4>
+
+                    <h4 class="text">conclude</h4>
                     </div>
                     <div class="triangle text-white" id="tracon"></div>
-                    <h3>@ViewBag.conclude</h3>
+                <h3 class="text">@ViewBag.conclude</h3>
                 </div>
                    </a>
             </div>  
@@ -89,13 +81,11 @@
                 <a id="ToClose">
         <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#e5eef5" id="divclo">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg>
-                        <h4>To close</h4>
+
+                    <h4 class="text">To close</h4>
                     </div>
                     <div class="triangle text-white" id="traclo"></div>
-                    <h3>@ViewBag.toclosed</h3>
+                <h3 class="text">@ViewBag.toclosed</h3>
                 </div>
                 </a>
             </div>  
@@ -103,13 +93,11 @@
                 <a id="UnPaid">
         <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#efeef4" id="divun">
                     <div class="d-flex align-items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg>
-                        <h4>Unpaid</h4>
+
+                    <h4 class="text">Unpaid</h4>
                     </div>
                     <div class="triangle text-white" id="traun"></div>
-                    <h3>@ViewBag.unpaid</h3>
+                <h3 class="text">@ViewBag.unpaid</h3>
                 </div>
                 </a>
             </div>
@@ -160,7 +148,7 @@
        <div class="container-fluid">
     <div class="row d-flex border rounded" style="">
         <div class="d-flex col-xl-6">
-            <div class="input-group bg-white mt-2 mb-2 d-flex align-items-center ms-2 " style="width:17rem">
+            <div class="input-group white-bag mt-2 mb-2 d-flex align-items-center ms-2 " style="width:17rem">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 50 50">
                     <path d="M 21 3 C 11.654545 3 4 10.654545 4 20 C 4 29.345455 11.654545 37 21 37 C 24.701287 37 28.127393 35.786719 30.927734 33.755859 L 44.085938 46.914062 L 46.914062 44.085938 L 33.875 31.046875 C 36.43682 28.068316 38 24.210207 38 20 C 38 10.654545 30.345455 3 21 3 z M 21 5 C 29.254545 5 36 11.745455 36 20 C 36 28.254545 29.254545 35 21 35 C 12.745455 35 6 28.254545 6 20 C 6 11.745455 12.745455 5 21 5 z">
                     </path>
@@ -183,33 +171,33 @@
         </div>
         <div class="d-flex flex-wrap col-xl-6  col-sm-12 justify-content-end">
             <button class="active-filter filter-options d-flex align-items-center  px-3 py-1 rounded btn filter-btn" data-value="">
-                <span>All</span>
+                <span class="filter">All</span>
             </button>
 
             <button class="filter-options px-2 py-1 rounded d-flex align-items-center ms-2 btn filter-btn" data-value="1">
                 <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <circle fill="#5fbc61" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
                 </svg>
-                <span class="ms-2">Patient</span>
+                <span class="ms-2 filter ">Patient</span>
             </button>
 
             <button class="filter-options px-2 py-1 rounded d-flex align-items-center ms-2 btn filter-btn" data-value="2">
                 <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <circle fill="#ed9124" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
                 </svg>
-                <span class="ms-2">Family/Friend</span>
+                <span class="ms-2 filter">Family/Friend</span>
             </button>
             <button class="filter-options px-2 py-1 rounded d-flex align-items-center ms-2 btn filter-btn" data-value="4">
                 <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <circle fill="#e26277" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
                 </svg>
-                <span class="ms-2">Business</span>
+                <span class="ms-2 filter">Business</span>
             </button>
             <button class="filter-options px-2 py-1 rounded d-flex align-items-center ms-2 btn filter-btn" data-value="3" >
                 <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <circle fill="#007fc6" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
                 </svg>
-                <span class="ms-2">Concierge</span>
+                <span class="ms-2 filter">Concierge</span>
             </button>
           
         </div>
