--- a/HelloDoc/Views/AdminDash/CreateRequest.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateRequest.cshtml
@@ -174,7 +174,7 @@
                         asp-for="AdminNote"
                                   placeholder="Leave a comment here"
                                   id="floatingTextarea2"
-                                  style="height: 120px"></textarea>
+                                  style="height: 120px" required></textarea>
                         <label for="floatingTextarea2 control-label" class="ms-2 floating-label">Enter Brief Details of symptoms (Optional)</label>
                     </div>
 
