--- a/HelloDoc/Views/AdminDash/ViewCase.cshtml
+++ b/HelloDoc/Views/AdminDash/ViewCase.cshtml
@@ -29,7 +29,7 @@
                 <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
             }
         </div>
-        <div class=" shadow bg-white p-4">
+        <div class=" shadow white-bag p-4">
             <h4 class="pt-3 mb-4">Patient Information</h4>
 
             <p>Confirmation Number</p>
