--- a/HelloDoc/Views/Home/Patient_submit_request.cshtml
+++ b/HelloDoc/Views/Home/Patient_submit_request.cshtml
@@ -40,23 +40,23 @@
 
                 <div class="d-grid gap-4 shadow-none mx-auto mt-4">
                     <a asp-action="patient_Request" asp-controller="Request"
-                       class="btn btn-1  text-start fs-4 pb-4 pt-1 btn-style"
+                       class="btn btn-1 shadow-none  text-start fs-4 pb-4 pt-1 btn-style"
                       >
                         PATIENT
                     </a>
 
                     <a asp-action="Family_Friend_Request" asp-controller="Request"
-                       class="btn btn-2 text-start fs-4 pb-4 btn-style"
+                       class="btn btn-2 shadow-none text-start fs-4 pb-4 btn-style"
                        type="button">
                         FAMILY/FRIEND
                     </a>
                     <a asp-action="Concierge_Request" asp-controller="Request"
-                       class="btn btn-3 text-start fs-4 pb-4 btn-style"
+                       class="btn btn-3 shadow-none text-start fs-4 pb-4 btn-style"
                        type="button">
                         CONCIERGE
                     </a>
                     <a asp-action="Business_Request" asp-controller="Request"
-                       class="btn btn-4 text-start fs-4 pb-4 btn-style"
+                       class="btn btn-4 shadow-none text-start fs-4 pb-4 btn-style"
                        type="button">
                         BUSINESS PARTNER
                     </a>
