--- a/HelloDoc/Views/AdminDash/Access/CreateAdminAccount.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/CreateAdminAccount.cshtml
@@ -48,11 +48,8 @@
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="form-floating">
                         <select class="form-control d-flex align-items-center py-2" asp-for="Role">
-                            <option>Select Roles</option>
-                            @foreach (var item in Model.roles)
-                            {
-                                <option value="@item.RoleId">@item.Name</option>
-                            }
+                            <option >Select Roles</option>
+                            <option>Admin</option>
                         </select>
                         <span asp-validation-for="Role" class="text-danger"></span>
                     </div>
