--- a/HelloDoc/Views/AdminDash/Partners/_PartnersPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/Partners/_PartnersPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<DAL.ViewModel.BusinessModel>
-<div class="bg-white border justify-content-center">
+<div class="white-bag border justify-content-center">
     <table class="table">
 
         <thead class="table-secondary text-center">
