--- a/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
+++ b/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
@@ -5,6 +5,141 @@
 	.fc-event-end .fc-event-time {
 		display: none;
 	}
+
+	<style >
+	.fc-time {
+		display: none;
+	}
+
+	.fc-daygrid-event {
+		cursor: pointer;
+	}
+
+	.fc-event-end .fc-event-time {
+		display: none;
+	}
+
+	.fc-header-toolbar.fc-header-resources-only {
+		background-color: #ff9999;
+		border: none;
+	}
+
+	.fc-header-toolbar,
+	.fc-daygrid-event {
+		background-color: #CCCCCC !important;
+	}
+
+	.fc-timeline-header-row {
+		background-color: gray !important;
+	}
+
+	.btn22 {
+		padding: 0.25rem 0.5rem !important;
+	}
+
+	.fc-header-toolbar .fc-button {
+		padding: 0.25rem 0.5rem !important;
+	}
+
+	.input-group {
+		width: 300px;
+	}
+
+	#calendar {
+		margin-top: 2rem;
+	}
+
+	.fc .fc-toolbar-title {
+		font-size: 22px;
+		font-weight: 600;
+	}
+
+	.fc-scrollgrid-sync-inner:has(.fc-col-header-cell-cushion) {
+		background-color: #bdbfbe;
+	}
+
+	.fc .fc-col-header-cell-cushion {
+		color: white;
+	}
+
+	.fc a {
+		color: black;
+		cursor: pointer;
+		text-decoration: none;
+	}
+
+	/* .fc-daygrid-day-top {
+					background-color: #ec9aef;
+				}*/
+
+	.fc .fc-button-group {
+		display: block;
+	}
+
+	.fc-button {
+		margin: 10px;
+	}
+
+	.fc-direction-ltr .fc-button-group > .fc-button:not(:last-child) {
+		background: none;
+		border: 1px solid #02BCE6;
+		color: #02BCE6;
+		border-radius: 5px;
+		margin: 3px;
+	}
+
+	.fc-direction-ltr .fc-button-group > .fc-button:last-child {
+		background: none;
+		border: 1px solid #02BCE6;
+		color: #02BCE6;
+		border-radius: 5px;
+		margin: 3px;
+	}
+
+	.fc .fc-button-primary:not(:disabled).fc-button-active:focus, .fc .fc-button-primary:not(:disabled):active:focus {
+		box-shadow: none;
+	}
+
+	.fc .fc-button-group > .fc-button.fc-button-active {
+		background-color: #02BCE6;
+		color: white;
+	}
+
+	.fc-toolbar-title {
+		font-weight: 600;
+	}
+
+	.fc-next-button.fc-button.fc-button-primary {
+		padding: 4px 5px;
+		border-radius: 50px;
+	}
+
+	.fc-prev-button.fc-button.fc-button-primary {
+		padding: 4px 5px;
+		border-radius: 50px;
+	}
+
+	.fc-direction-ltr {
+		padding: 4px 5px;
+		border-radius: 50px;
+	}
+
+	.fc a {
+		color: darkcyan !important;
+	}
+
+	.fc-daygrid-event {
+		background-color: transparent !important;
+	}
+
+	.fc-daygrid-day-top {
+		background-color: #F4CAED !important
+	}
+
+	.fc-timeline-slot-frame {
+		background-color: #bdbfbe;
+	}
+</style>
 </style>
 <div class="container-fluid bg-body-secondary" style="height:80vh !important">
 <div class="justify-content-between d-flex container-fluid mb-2 position-relative container my-3">
