--- a/HelloDoc/Views/Request/Concierge_Request.cshtml
+++ b/HelloDoc/Views/Request/Concierge_Request.cshtml
@@ -129,12 +129,13 @@
                         <div class="row">
                             <div class="col col-sm-6 col-12">
                                 <div class="form-floating mb-3">
-                                    <input type="text"
-                                           asp-for="State_c"
-                                           class="form-control"
-                                           id="floatingPassword"
-                                           placeholder="Password" />
-                                    <label for="floatingPassword">State</label>
+                                    <select asp-for="State" class="form-select" aria-label="Default select example">
+                                        <option selected>Open this select menu</option>
+                                        @foreach (var item in Model.regions)
+                                        {
+                                            <option value="@item.RegionId">@item.Name</option>
+                                        }
+                                    </select>
                                 </div>
                             </div>
                             <div class="col col-sm-6 col-12">
