--- a/HelloDoc/Views/Request/Family_Friend_Request.cshtml
+++ b/HelloDoc/Views/Request/Family_Friend_Request.cshtml
@@ -67,12 +67,13 @@
                         <div class="row">
                             <div class="col col-12 col-sm-6">
                                 <div class="form-floating mb-3">
-                                    <input type="text"
+                                    <input type="tel"
                                            asp-for="PhoneNumberother"
                                            class="form-control"
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">Mobile No</label>
+                                    <span asp-validation-for="PhoneNumberother" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-6 mb-3">
@@ -146,7 +147,7 @@
                                            class="form-control"
                                            id="floatingPassword"
                                            placeholder="Password" max="@DateTime.Now.ToString("yyyy-MM-dd")"
-                                           min="@DateTime.Now.AddYears(-100).ToString("yyyy-MM-dd")" />
+                                           min="@DateTime.Now.AddYears(-10).ToString("yyyy-MM-dd")" />
                                     <label for="floatingPassword">Date Of Birth</label>
                                     <span asp-validation-for="BirthDate_P" class="text-danger mb-2"></span>
                                 </div>
@@ -274,7 +275,7 @@
 
 
     <!-- -----------------form-------------------------- -->
-
+    <script src="~/js/Patient_request.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
