--- a/HelloDoc/Views/DashBoard/ViewDocs.cshtml
+++ b/HelloDoc/Views/DashBoard/ViewDocs.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout-1.cshtml";
 }
 
-<div class="bg-body-secondary">
-    <div class="mx-auto pt-4  pb-3" style="width:70%;">
+<div class="bg-body-secondary" style="height:87vh">
+    <div class="mx-auto pt-4  pb-3" style="width:70%;" >
         <div class="d-flex justify-content-between my-2">
             <h3>View Documents</h3><br />
             <a asp-action="index"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
