--- a/HelloDoc/Views/AdminDash/SendOrder.cshtml
+++ b/HelloDoc/Views/AdminDash/SendOrder.cshtml
@@ -29,7 +29,7 @@
                 <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
             }
     </div>
-    <div class="shadow bg-white p-4">
+    <div class="shadow white-bag p-4">
 
             <form method="post" asp-action="SendOrder" asp-route-id="@Model.requestid" asp-controller="@controller" enctype="multipart/form-data">
 
