--- a/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
+++ b/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
@@ -4,7 +4,7 @@
     var Uniqueid = new HashSet<int?>();
 }
 
-<div class="tab-pane fade show active bg-body-secondary " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" >
+<div class="tab-pane fade show active bg-body-secondary" style="height:85vh" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" >
 
     <div class="mx-auto pt-5" style="width:95%;">
        <h3>Medical History</h3>
